--- a/src/styles/includes/_mixins.scss
+++ b/src/styles/includes/_mixins.scss
@@ -31,34 +31,6 @@
   }
 }
 
-// Breakpoints, Desktop-first
-
-/*
-@mixin desktop {
-  @media screen and (min-width: 1025px) {
-    @content;
-  }
-}
-
-@mixin laptop {
-  @media screen and (max-width: 1439px) {
-    @content;
-  }
-}
-
-@mixin tablet {
-  @media screen and (max-width: 1024px) {
-    @content;
-  }
-}
-
-@mixin mobile {
-  @media screen and (max-width: 767px) {
-    @content;
-  }
-}
-*/
-
 // Actions
 @mixin center($axis: xy) {
   position: absolute;
@@ -87,9 +59,8 @@
 }
 
 // States
-@mixin haf {
+@mixin hf {
   &:hover,
-  &:active,
   &:focus {
     @content;
   }
@@ -100,82 +71,32 @@
   @return $px / 16px + 0rem;
 }
 
-@mixin font($style: 400) {
-  /*
-  @if $style == 100 {
-    font-family: "#{$font_name} Thin", sans-serif;
+@mixin font($style: te-400) {
+  @if $style == ti-400 {
+    font-family: '#{$font-title-name} Regular', sans-serif;
   }
 
-  @if $style == "100it" {
-    font-family: "#{$font_name} Thin Italic", sans-serif;
+  @if $style == ti-500 {
+    font-family: '#{$font-title-name} Medium', sans-serif;
   }
 
-  @if $style == 200 {
-    font-family: "#{$font_name} Extra Light", sans-serif;
+  @if $style == ti-700 {
+    font-family: '#{$font-title-name} Bold', sans-serif;
   }
 
-  @if $style == "200it" {
-    font-family: "#{$font_name} Extra Light Italic", sans-serif;
-  }
-  */
-
-  @if $style == 300 {
-    font-family: '#{$font_name} Light', sans-serif;
+  @if $style == te-400 {
+    font-family: '#{$font-text-name} Regular', sans-serif;
   }
 
-  @if $style == '300it' {
-    font-family: '#{$font_name} Light Italic', sans-serif;
+  @if $style == te-400-it {
+    font-family: '#{$font-text-name} Italic', sans-serif;
   }
 
-  @if $style == 400 {
-    font-family: '#{$font_name} Regular', sans-serif;
+  @if $style == te-700 {
+    font-family: '#{$font-text-name} Bold', sans-serif;
   }
 
-  @if $style == '400it' {
-    font-family: '#{$font_name} Regular Italic', sans-serif;
+  @if $style == te-700-it {
+    font-family: '#{$font-text-name} Bold Italic', sans-serif;
   }
-
-  /*
-  @if $style == 500 {
-    font-family: "#{$font_name} Medium", sans-serif;
-  }
-
-  @if $style == "500it" {
-    font-family: "#{$font_name} Medium Italic", sans-serif;
-  }
-  */
-
-  @if $style == 600 {
-    font-family: '#{$font_name} Semi Bold', sans-serif;
-  }
-
-  @if $style == '600it' {
-    font-family: '#{$font_name} Semi Bold Italic', sans-serif;
-  }
-
-  @if $style == 700 {
-    font-family: '#{$font_name} Bold', sans-serif;
-  }
-
-  @if $style == '700it' {
-    font-family: '#{$font_name} Bold Italic', sans-serif;
-  }
-
-  @if $style == 800 {
-    font-family: '#{$font_name} Extra Bold', sans-serif;
-  }
-
-  @if $style == '800it' {
-    font-family: '#{$font_name} Extra Bold', sans-serif;
-  }
-
-  /*
-  @if $style == 900 {
-    font-family: "#{$font_name} Black", sans-serif;
-  }
-
-  @if $style == "900it" {
-    font-family: "#{$font_name} Black", sans-serif;
-  }
-  */
 }
