feat: update folder structure; add Header, Logo, Nav; update styles

--- a/src/styles/includes/_mixins.scss
+++ b/src/styles/includes/_mixins.scss
@@ -66,9 +66,13 @@
   }
 }
 
+@mixin trans($dur: 0.3) {
+  transition: all $dur + s;
+}
+
 // Fonts
-@function rem($px) {
-  @return $px / 16px + 0rem;
+@function rem($val) {
+  @return $val / 16 + 0rem;
 }
 
 @mixin font($style: te-400) {
