feat: add Posts, Post; wip

--- a/src/styles/includes/_mixins.scss
+++ b/src/styles/includes/_mixins.scss
@@ -7,6 +7,12 @@
 }
 
 // Breakpoints, Mobile-first
+@mixin mobile-sm {
+  @media screen and (max-width: 767px) {
+    @content;
+  }
+}
+
 @mixin mobile {
   @media screen and (max-width: 1024px) {
     @content;
