--- a/src/templates/3. sections/Header/Header.module.scss
+++ b/src/templates/3. sections/Header/Header.module.scss
@@ -1,7 +1,7 @@
 @import 'src/styles/includes/includes';
 
 .header {
-  padding: rem(15) 0;
+  padding: rem(25) 0 rem(15);
   background-color: $color-bg;
 
   @include laptop {
