--- a/src/templates/3. sections/Posts/Posts.module.scss
+++ b/src/templates/3. sections/Posts/Posts.module.scss
@@ -2,7 +2,7 @@
 
 .posts {
   padding: rem(30) 0;
-  background-image: $color-bg;
+  background-color: $color-bg;
 
   @include laptop {
     padding: rem(40) 0;
