--- a/src/templates/1. elements/PageLink/PageLink.module.scss
+++ b/src/templates/1. elements/PageLink/PageLink.module.scss
@@ -9,20 +9,20 @@
   color: $color-title;
 
   @include hf {
-    .layer {
-      opacity: 1;
-      width: 100%;
+    .title,
+    .view-all {
+      span {
+        color: $color-bg;
+        background-color: $color-primary;
+      }
     }
   }
 }
 
 .title,
 .view-all {
-  position: relative;
-
   span {
-    position: relative;
-    z-index: 1;
+    @include trans;
   }
 }
 
@@ -45,22 +45,4 @@
   @include laptop {
     font-size: rem(20);
   }
-
-  .layer {
-    right: 0;
-    left: auto;
-  }
-}
-
-.layer {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  opacity: 0;
-  width: 0;
-  height: 100%;
-  border-radius: 2px;
-  background-color: $color-primary;
-  transition: width 0.3s, opacity 0.6s;
 }
