feat: add Pagination (wip); add Font Awesome (React)

--- a/src/templates/2. components/FeaturedPost/FeaturedPost.module.scss
+++ b/src/templates/2. components/FeaturedPost/FeaturedPost.module.scss
@@ -50,7 +50,7 @@
     background-color: $color-primary;
 
     @include hf {
-      color: $color-title;
+      color: $color-title !important;
       background-color: $color-bg;
     }
   }
