--- a/src/templates/2. components/Post/Post.module.scss
+++ b/src/templates/2. components/Post/Post.module.scss
@@ -107,7 +107,7 @@
     }
 
     @include hf {
-      color: $color-bg;
+      color: $color-bg !important;
       background-color: $color-primary;
     }
   }
