feat: finish pagination

--- a/src/templates/2. components/FeaturedPost/FeaturedPost.module.scss
+++ b/src/templates/2. components/FeaturedPost/FeaturedPost.module.scss
@@ -51,7 +51,7 @@
 
     @include hf {
       color: $color-title !important;
-      background-color: $color-bg;
+      background-color: $color-bg !important;
     }
   }
 }
