--- a/src/templates/2. components/Pagination/Pagination.module.scss
+++ b/src/templates/2. components/Pagination/Pagination.module.scss
@@ -8,47 +8,91 @@
 
 .list {
   display: flex;
+  margin: 0 rem(-2.5);
+}
+
+.item {
+  padding: 0 rem(2.5);
 }
 
 .link {
-  @include trans;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: rem(40);
-  height: rem(40);
+  width: rem(25);
+  height: rem(25);
   border-radius: 50%;
 
-  @include hf {
-    background-color: $color-primary;
+  @include tablet {
+    width: rem(40);
+    height: rem(40);
+  }
 
-    .icon {
-      color: $color-bg;
+  &.clickable {
+    @include trans;
+
+    @include hf {
+      background-color: $color-primary;
+
+      .icon {
+        color: $color-bg;
+      }
+
+      .text {
+        color: $color-bg;
+      }
+    }
+  }
+
+  &.active {
+    .text {
+      color: $color-primary;
     }
   }
 
   &.disabled {
     opacity: 0.3;
     cursor: not-allowed;
-
-    @include hf {
-      background-color: transparent;
-
-      .icon {
-        color: $color-title;
-      }
-    }
   }
 }
 
 .icon {
   @include trans;
-  width: rem(20);
+  width: rem(15);
   color: $color-title;
+
+  @include tablet {
+    width: rem(20);
+  }
+
+  &.small {
+    width: rem(10);
+
+    @include tablet {
+      width: rem(15);
+    }
+  }
 
   svg {
     display: block;
     width: 100%;
     height: 100%;
+  }
+}
+
+.text {
+  @include font(ti-700);
+  @include trans;
+  text-align: center;
+  font-size: rem(14);
+  line-height: 1;
+  color: $color-title;
+
+  @include mobile-sm {
+    margin-bottom: rem(-3);
+  }
+
+  @include tablet {
+    font-size: rem(18);
   }
 }
