feat: add DedicatedPost; add Tags; update font sizes (make them larger) [WIP]

--- a/src/templates/1. elements/Logo/Logo.module.scss
+++ b/src/templates/1. elements/Logo/Logo.module.scss
@@ -3,7 +3,11 @@
 .link {
   @include font(ti-700);
   display: block;
-  font-size: rem(32);
+  font-size: rem(30);
+
+  @include laptop {
+    font-size: rem(34);
+  }
 
   span {
     @include trans;
