feat: add RichText; add reframe.js; add html to DedicatedPost [WIP]

--- a/src/templates/3. sections/DedicatedPost/DedicatedPost.module.scss
+++ b/src/templates/3. sections/DedicatedPost/DedicatedPost.module.scss
@@ -79,5 +79,13 @@
 .cover {
   position: relative;
   width: 100%;
-  height: rem(500);
+  height: rem(300);
+
+  @include laptop {
+    height: rem(500);
+  }
+
+  @include desktop {
+    height: rem(700);
+  }
 }
