--- a/src/styles/includes/_mixins.scss
+++ b/src/styles/includes/_mixins.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 // Retina
 @mixin retina {
   @media screen and (-webkit-min-device-pixel-ratio: 1.5),
@@ -78,7 +80,7 @@
 
 // Fonts
 @function rem($val) {
-  @return $val / 16 + 0rem;
+  @return math.div($val, 16) + 0rem;
 }
 
 @mixin font($style: te-400) {
