feat: add FeaturedPost title__link line clamp

--- a/src/templates/2. components/FeaturedPost/FeaturedPost.module.scss
+++ b/src/templates/2. components/FeaturedPost/FeaturedPost.module.scss
@@ -71,6 +71,10 @@
 
     span {
       @include trans;
+      display: -webkit-box;
+      overflow: hidden;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 2;
       color: $color-title;
     }
 
