--- a/src/templates/2. components/RichText/RichText.module.scss
+++ b/src/templates/2. components/RichText/RichText.module.scss
@@ -1,8 +1,11 @@
 @import 'src/styles/includes/includes';
 
-// .rich-text {
-//   :global {
-//     .kg {
-//     }
-//   }
-// }
+.rich-text {
+  :global {
+    img {
+      display: block;
+      max-width: 100%;
+      height: auto;
+    }
+  }
+}
