wip: update images behaviour in RTE; update printWidth in .prettierrc

--- a/src/styles/includes/_mixins.scss
+++ b/src/styles/includes/_mixins.scss
@@ -27,6 +27,12 @@
   }
 }
 
+@mixin container {
+  @media screen and (min-width: 891px) {
+    @content;
+  }
+}
+
 @mixin laptop {
   @media screen and (min-width: 1025px) {
     @content;
