--- a/src/styles/includes/_variables.scss
+++ b/src/styles/includes/_variables.scss
@@ -14,4 +14,6 @@ $color-text--dark: #9ea7aa;
 $color-gradient: linear-gradient(90deg, #360033 0%, #0b8793 100%);
 
 // Misc
+$container-width: 890px;
+$container-padding: 15px;
 $shadow-primary: 5px 5px 10px 0px rgba($color-primary, 0.6);
