--- a/src/styles/misc/adjustment.scss
+++ b/src/styles/misc/adjustment.scss
@@ -1,8 +1,3 @@
-// Local variables
-$container_width: 890px;
-$container_padding_sides: 15px;
-//--
-
 * {
   box-sizing: border-box;
 }
@@ -35,16 +30,15 @@ body {
 
 #__next {
   position: relative;
-  // Stick the footer with a dynamic height to the bottom of a page
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
   min-height: 100%;
-  //-
 }
 
 .container {
-  max-width: $container_width;
-  padding: 0 $container_padding_sides;
+  max-width: $container-width;
+  padding: 0 $container-padding;
   margin: 0 auto;
 }
 
@@ -152,7 +146,5 @@ figure {
 
 footer {
   width: 100%;
-  // Stick the footer with a dynamic height to the bottom of a page
   margin-top: auto;
-  //-
 }
