--- a/src/templates/2. components/RichText/RichText.module.scss
+++ b/src/templates/2. components/RichText/RichText.module.scss
@@ -64,16 +64,34 @@
       }
 
       &-gallery {
+        &-container {
+          + figcaption {
+            margin-top: rem(25);
+          }
+        }
+
         &-row {
           display: flex;
-          margin: 0 rem(-20);
+          flex-wrap: wrap;
+          margin: 0 rem(-20) rem(-25);
+
+          @include container {
+            margin-right: rem(-5);
+            margin-left: rem(-5);
+          }
         }
 
         &-image {
+          flex-grow: 1;
           width: 50%;
-          padding: 0 rem(5);
+          padding: 0 rem(5) rem(10);
+
+          @include tablet {
+            width: 33.33333%;
+          }
 
           img {
+            width: 100%;
             height: 100%;
             object-fit: cover;
           }
@@ -85,8 +103,27 @@
         &-full {
           img {
             max-width: none;
-            width: calc(100% + 30px);
-            margin: 0 -15px;
+            width: calc(100% + (#{$container-padding} * 2));
+            margin: 0 calc(#{$container-padding} * -1);
+          }
+        }
+
+        &-wide {
+          img {
+            @include container {
+              max-width: 100%;
+              width: auto;
+              margin: 0 auto;
+            }
+          }
+        }
+
+        &-full {
+          img {
+            @include container {
+              width: 100vw;
+              margin: 0 calc((100vw - (#{$container-width} - (#{$container-padding} * 2))) / 2 * -1);
+            }
           }
         }
       }
