--- a/src/styles/includes/_variables.scss
+++ b/src/styles/includes/_variables.scss
@@ -11,7 +11,7 @@ $color-bg--light: #2c2c2c;
 $color-title: #e2f1f8;
 $color-text: #cfd8dc;
 $color-text--dark: #9ea7aa;
-$color-gradient: linear-gradient(90deg, #360033 0%, #0b8793 100%);
+$color-gradient: linear-gradient(to right, #c33764, #1d2671);
 
 // Misc
 $container-width: 890px;
