--- a/src/templates/2. components/RichText/RichText.module.scss
+++ b/src/templates/2. components/RichText/RichText.module.scss
@@ -63,6 +63,22 @@
         }
       }
 
+      &-code-card {
+        pre {
+          padding: rem(20);
+          margin: 0;
+          border: rem(1) solid $color-primary;
+          border-radius: 5px;
+          background: $color-bg--light;
+        }
+
+        code {
+          padding: 0;
+          border: none;
+          font-size: rem(20);
+        }
+      }
+
       &-gallery {
         &-container {
           + figcaption {
@@ -129,6 +145,19 @@
       }
     }
 
+    a {
+      @include trans;
+      color: $color-text;
+      background-image: $color-gradient;
+      background-repeat: repeat-x;
+      background-position: 0 100%;
+      background-size: 100% rem(2);
+
+      @include hf {
+        background-size: 100% rem(20);
+      }
+    }
+
     blockquote {
       @include font(te-400-it);
       position: relative;
@@ -157,6 +186,7 @@
       padding: rem(2) rem(5);
       border: rem(1) solid $color-primary;
       border-radius: 5px;
+      font-size: inherit;
       color: $color-text;
       background: $color-bg--light;
     }
