--- a/src/templates/2. components/RichText/RichText.module.scss
+++ b/src/templates/2. components/RichText/RichText.module.scss
@@ -65,11 +65,13 @@
 
       &-code-card {
         pre {
+          overflow: auto;
           padding: rem(20);
           margin: 0;
-          border: rem(1) solid $color-primary;
+          border: rem(2) solid $color-primary;
           border-radius: 5px;
-          background: $color-bg--light;
+          box-shadow: $shadow-primary;
+          background: $color-bg;
         }
 
         code {
@@ -146,15 +148,17 @@
     }
 
     a {
-      @include trans;
-      color: $color-text;
-      background-image: $color-gradient;
-      background-repeat: repeat-x;
-      background-position: 0 100%;
-      background-size: 100% rem(2);
+      &:not(.kg-bookmark-container) {
+        @include trans;
+        color: $color-text;
+        background-image: $color-gradient;
+        background-repeat: repeat-x;
+        background-position: 0 100%;
+        background-size: 100% rem(2);
 
-      @include hf {
-        background-size: 100% rem(20);
+        @include hf {
+          background-size: 100% rem(20);
+        }
       }
     }
 
@@ -188,7 +192,7 @@
       border-radius: 5px;
       font-size: inherit;
       color: $color-text;
-      background: $color-bg--light;
+      background: $color-bg;
     }
 
     em {
