feat: change primary color as an experiment

--- a/src/styles/includes/_variables.scss
+++ b/src/styles/includes/_variables.scss
@@ -5,7 +5,7 @@ $font-title-name: 'Comfortaa';
 $font-title-path-name: $font-title-name;
 
 // Colors
-$color-primary: #008fff;
+$color-primary: #f3e600;
 $color-bg: #000000;
 $color-bg--light: #2c2c2c;
 $color-title: #e2f1f8;
