--- a/src/templates/3. sections/Featured/Featured.module.scss
+++ b/src/templates/3. sections/Featured/Featured.module.scss
@@ -1,8 +1,23 @@
 @import 'src/styles/includes/includes';
 
 .featured {
+  position: relative;
   padding: rem(30) 0;
+}
+
+.bg {
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  left: calc((100vw - 60vw) / 2 * -1);
+  width: 100vw;
+  height: 100%;
   background-image: $color-gradient;
+}
+
+.wrapper {
+  position: relative;
+  z-index: 1;
 }
 
 .page-link {
