--- a/src/templates/3. sections/Header/Header.module.scss
+++ b/src/templates/3. sections/Header/Header.module.scss
@@ -1,6 +1,7 @@
 @import 'src/styles/includes/includes';
 
 .header {
+  @include trans;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -13,26 +14,70 @@
   @include laptop {
     padding: rem(25) 0;
   }
+
+  &_hidden {
+    transform: translate(-100%, 0);
+  }
+
+  :global(.container) {
+    height: 100%;
+  }
 }
 
 .wrapper {
-  @include laptop {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 rem(-15);
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: hidden auto;
+  height: 100%;
 }
 
 .logo {
-  @include laptop {
-    padding: 0 rem(15);
-  }
+  text-align: center;
 }
 
-.nav {
-  @include mobile {
-    margin-top: rem(20);
+.trigger {
+  margin-top: rem(10);
+  text-align: center;
+
+  &__button {
+    @include trans;
+    position: relative;
+    width: rem(40);
+    height: rem(40);
+    border-radius: 5px;
+    color: $color-text;
+    background-color: transparent;
+
+    @include hf {
+      background-color: $color-primary;
+    }
+
+    &-icon {
+      @include center;
+      width: rem(15);
+      color: $color-title;
+
+      @include tablet {
+        width: rem(25);
+      }
+
+      svg {
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+
+  &_show {
+    position: absolute;
+    right: rem(-55);
+    bottom: rem(15);
+
+    @include laptop {
+      right: rem(-65);
+      bottom: rem(25);
+    }
   }
 }
