wip: add socials, update styles

--- a/src/templates/3. sections/Header/Header.module.scss
+++ b/src/templates/3. sections/Header/Header.module.scss
@@ -3,16 +3,22 @@
 .header {
   @include trans;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   top: 0;
   left: 0;
-  width: 20%;
+  width: 100%;
   height: 100vh;
   padding: rem(25) 0 rem(15);
-  background-color: rgba($color-bg, 0.5);
+  background-color: rgba($color-bg, 0.9);
+
+  @include tablet {
+    width: 30%;
+  }
 
   @include laptop {
+    width: 20%;
     padding: rem(25) 0;
+    background-color: rgba($color-bg, 0.5);
   }
 
   &_hidden {
@@ -37,7 +43,7 @@
 }
 
 .trigger {
-  margin-top: rem(10);
+  margin-top: rem(20);
   text-align: center;
   transition: opacity 0.9s;
 
@@ -56,11 +62,11 @@
 
     &-icon {
       @include center;
-      width: rem(15);
+      width: rem(25);
       color: $color-title;
 
       @include tablet {
-        width: rem(25);
+        width: rem(30);
       }
 
       svg {
@@ -76,15 +82,19 @@
     right: -9999px;
     bottom: rem(15);
     opacity: 0;
+    margin-top: 0;
 
     @include laptop {
-      right: rem(-65);
       bottom: rem(25);
     }
 
     &.trigger_hidden {
       right: rem(-55);
       opacity: 1;
+
+      @include laptop {
+        right: rem(-65);
+      }
     }
   }
 
