--- a/src/templates/0. layout/Layout.module.scss
+++ b/src/templates/0. layout/Layout.module.scss
@@ -1,6 +1,8 @@
 @import 'src/styles/includes/includes';
 
 .main {
-  width: 60%;
-  margin: 0 auto;
+  @include laptop {
+    width: 60%;
+    margin: 0 auto;
+  }
 }
