--- a/src/templates/3. sections/Featured/Featured.module.scss
+++ b/src/templates/3. sections/Featured/Featured.module.scss
@@ -9,10 +9,15 @@
   position: absolute;
   z-index: 0;
   top: 0;
-  left: calc((100vw - 60vw) / 2 * -1);
-  width: 100vw;
+  left: 0;
+  width: 100%;
   height: 100%;
   background-image: $color-gradient;
+
+  @include laptop {
+    left: calc((100vw - 60vw) / 2 * -1);
+    width: 100vw;
+  }
 }
 
 .wrapper {
