--- a/src/templates/2. components/Post/Post.module.scss
+++ b/src/templates/2. components/Post/Post.module.scss
@@ -10,7 +10,7 @@
 .cover {
   width: 100%;
 
-  @include mobile-sm {
+  @include mobile {
     max-width: rem(400);
     margin-bottom: rem(20);
   }
