feat: update the header behaviour

--- a/src/templates/3. sections/Header/Header.module.scss
+++ b/src/templates/3. sections/Header/Header.module.scss
@@ -7,18 +7,17 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   padding: rem(25) 0 rem(15);
-  background-color: rgba($color-bg, 0.9);
+  background-color: rgba($color-bg, 0.8);
 
   @include tablet {
-    width: 30%;
+    width: 40%;
+    padding: rem(25) 0;
   }
 
-  @include laptop {
-    width: 20%;
-    padding: rem(25) 0;
-    background-color: rgba($color-bg, 0.5);
+  @include desktop {
+    width: 30%;
   }
 
   &_hidden {
@@ -38,14 +37,37 @@
   height: 100%;
 }
 
+.dimmer {
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+
+  &_hidden {
+    left: -9999px;
+    display: none;
+  }
+}
+
 .logo {
   text-align: center;
 }
 
+.footer {
+  overflow: hidden;
+}
+
 .trigger {
-  margin-top: rem(20);
+  margin-top: rem(15);
   text-align: center;
   transition: opacity 0.9s;
+
+  @include tablet {
+    margin-top: rem(20);
+  }
 
   &__button {
     @include trans;
@@ -88,7 +110,7 @@
       bottom: rem(25);
     }
 
-    &.trigger_hidden {
+    &.trigger_hidden-sidebar {
       right: rem(-55);
       opacity: 1;
 
@@ -98,7 +120,7 @@
     }
   }
 
-  &_hidden {
+  &_hidden-sidebar {
     opacity: 0;
   }
 }
