--- a/src/templates/2. components/RichText/RichText.module.scss
+++ b/src/templates/2. components/RichText/RichText.module.scss
@@ -265,9 +265,9 @@
         @include trans;
         color: $color-text;
         background-image: $color-gradient;
-        background-repeat: repeat-x;
         background-position: 0 100%;
         background-size: 100% rem(2);
+        background-repeat: repeat-x;
 
         @include hf {
           background-size: 100% rem(20);
@@ -506,6 +506,38 @@
 
         &::marker {
           color: $color-primary;
+        }
+      }
+    }
+  }
+
+  &_small {
+    :global {
+      a {
+        &:not(.kg-bookmark-container) {
+          @include hf {
+            background-size: 100% rem(16);
+
+            @include laptop {
+              background-size: 100% rem(16);
+            }
+          }
+        }
+      }
+
+      p {
+        font-size: rem(16);
+
+        @include laptop {
+          font-size: rem(16);
+        }
+
+        &:not(:last-child) {
+          margin-bottom: rem(5);
+
+          @include laptop {
+            margin-bottom: rem(5);
+          }
         }
       }
     }
